add GET info for a single member
