# routes/loans.js
@@ -6,6 +6,8 @@ const validateId = require('../middleware/validateId');
 
 router.get('/', controller.getAll);
 
+router.get('/member/:memberId', validateId, controller.getByMember);
+
 router.get('/:id', validateId, controller.getSingle);
 
 router.post('/', controller.createLoan);
